# smart-led-effects-rs

./: README.md
simulator/: Cargo.toml  README.md  build.sh
simulator/src/: lib.rs
simulator/www/: index.html
src/strip/: brightness.rs  concat.rs  energy_bar.rs  gamma.rs  mod.rs  static_effect.rs
