[package]
name = "smart-led-simulator-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smart_led_effects = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Performance",
]

[features]
serve = ["dep:tokio", "dep:axum", "dep:tower-http"]

[[bin]]
name = "serve"
required-features = ["serve"]
